src/web-client/src/components/pages/Dashboard/components/Navigation/Navigation.scss
.navigation {
  display: flex;
  flex: 0.3 1 125px;
  justify-content: space-evenly;
  align-items: center;
  height: 80px;

  &__item {
    height: 55px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;

    &:hover {
      cursor: pointer;

      .menu__item__text {
        color: orange;
      }
    }

    &__icon {
      display: flex;
      align-items: center;
      justify-content: flex-end;
      flex-basis: 40px;

      .icon--god-favors {
        width: 40px;
      }

      .icon--settings {
        width: 25px;
      }
    }

    &__text {
      display: flex;
      align-items: flex-end;
      flex-grow: 1;
      color: #755123;
      font-size: 14px;
    }
  }
}

@media (max-width: 575.98px) {
  .navigation {
    display: none;
  }
}

